# SeraPro

./: .env.example  .gitignore  DATA_VISUALIZATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_COMPLETE.md  DEVELOPMENT_REPORT.md  DEVELOPMENT_SUMMARY.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  TEAM_REVIEW_REPORT.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  start.sh  使用说明.md  自动化部署使用指南.md
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial.py  c44a5c0e54d6_add_system_config_table.py
frontend/: .gitignore  DEVELOPMENT_SUMMARY.md  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  serve-proxy.json  server.cjs  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AIChatDialog.tsx
frontend/src/hooks/: useDeploymentWebSocket.ts
frontend/src/store/: useAuthStore.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  auth.py  deployments.py  knowledge.py  servers.py
src/core/ai/: __init__.py  config.py  cost_tracker.py  debugger.py
src/core/credentials/: __init__.py  encryption.py
src/core/deployment/: __init__.py  executor.py  planner.py
src/core/errors/: __init__.py  exceptions.py  (+1 more)
src/db/: database.py
src/utils/: cache.py
tests/: conftest.py  test_auth.py  test_e2e_deployment.py  test_encryption.py  test_knowledge.py  test_servers.py  test_ssh_integration.py
(+42 files in other folders)
